pre-release update

--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,11 @@
 
       <nav id="nav" class="fixed flex justify-center">
         <div class="md:flex md:justify-around w-fit">
-          <div class="md:block hidden"><a href="#about">About</a></div>
+          <!-- <div class="md:block hidden"><a href="#about">About</a></div> -->
           <button class="header-button" name="Sustaria Lab">
             <a class="sustaria" href="./index.html">Sustaria Festival <span>| Lab</span></a>
           </button>
-          <div class="md:block hidden"><a href="#projects">Progetti</a></div>
+          <!-- <div class="md:block hidden"><a href="#projects">Progetti</a></div> -->
         </div>
       </nav>
 
@@ -68,18 +68,18 @@
 
       </div>
 
-      <div class="social text-center w-full pb-24">
-              <h4 class="mt-16 md:mt-48 mb-4">Con il supporto di</h4>
-              <picture>
-                  <img class="w-80 ml-auto mr-auto" alt="Logo Sustaria Festival" src="./assets/images/logo-sustaria.png">
-              </picture>
-              <!-- <h2 class="sustaria text-orange-600">SUSTARÌA</h2>
-              <p class="sustaria text-2xl mt-4">Segni di Irrequietezza Popolare</p> -->
-              <ul class="mt-16 md:mt-24 md:flex md:justify-around">
-                <li class="mb-5 md:pl-20 "><a href="https://www.facebook.com/sustaria.festival/" target="_blank" rel="noopener noreferrer">↗ Facebook</a></li>
-                <li class="mb-5  md:pr-20"><a href="https://www.instagram.com/sustaria.festival/" target="_blank" rel="noopener noreferrer">↗ Instagram</a></li>
-              </ul>
-       </div>
+      <div class="mt-24 social text-center w-full pb-12">
+        <h4 class="mb-4">Con il supporto di</h4>
+        <picture>
+            <img class="w-40 ml-auto mr-auto" alt="Logo Sustaria Festival" src="./assets/images/logo-sustaria.png">
+        </picture>
+        <!-- <h2 class="sustaria text-orange-600">SUSTARÌA</h2>
+        <p class="sustaria text-2xl mt-4">Segni di Irrequietezza Popolare</p> -->
+        <ul>
+          <li><a href="https://www.facebook.com/sustaria.festival/" target="_blank" rel="noopener noreferrer">↗ Facebook</a></li>
+          <li><a href="https://www.instagram.com/sustaria.festival/" target="_blank" rel="noopener noreferrer">↗ Instagram</a></li>
+        </ul>
+      </div>
 
       
 
@@ -96,7 +96,24 @@
         </div>
 
         <div class="footer-bottom">
-          <div class="fake-marquee">Open for Collaborations Open for Collaborations Open for Collaborations Open for Collaborations Open for Collaborations Open for Collaborations Open for Collaborations Open for Collaborations Open for Collaborations</div>
+          <!-- <div class="fake-marquee">Open for Collaborations Open for Collaborations Open for Collaborations Open for Collaborations Open for Collaborations Open for Collaborations Open for Collaborations Open for Collaborations Open for Collaborations</div> -->
+          <div class="marquee enable-animation">
+            <ul class="marquee__content">
+              <li>Open for collaborations</li>
+              <li>Open for collaborations</li>
+              <li>Open for collaborations</li>
+              <li>Open for collaborations</li>
+              <li>Open for collaborations</li>
+            </ul>
+        
+            <ul aria-hidden="true" class="marquee__content">
+              <li>Open for collaborations</li>
+              <li>Open for collaborations</li>
+              <li>Open for collaborations</li>
+              <li>Open for collaborations</li>
+              <li>Open for collaborations</li>
+            </ul>
+          </div>
         </div>
 
       </footer>
