test image decomopression

--- a/src/remapping-lago.html
+++ b/src/remapping-lago.html
@@ -78,10 +78,10 @@
                       <img src="./assets/images/gif_toolkit.gif" height="700px" alt="">
                     </div> -->
                     <div class="swiper-slide">
-                      <img src="./assets/images/toolkit_1.jpg" alt="">
+                      <img src="./assets/images/toolkit_1.jpg?nf_resize=fit&w=300&h=300" alt="">
                     </div>
                     <div class="swiper-slide">
-                      <img src="./assets/images/toolkit_2.jpg" alt="">
+                      <img src="./assets/images/toolkit_2.jpg?nf_resize=fit&w=300&h=300" alt="">
                     </div>
                     <div class="swiper-slide">
                       <img src="./assets/images/toolkit_3.jpg" alt="">
