--- a/src/remapping-lago.html
+++ b/src/remapping-lago.html
@@ -35,7 +35,7 @@
         </section> -->
 
         <div class="remappingLago-cover">
-          <iframe src="https://www.google.com/maps/embed?pb=!4v1669645550024!6m8!1m7!1sCAoSLEFGMVFpcE9VaVY1YktBeXFaVmZfWlRNM0pZaUdod0lEUFI3Q0pRamlWNlQ4!2m2!1d39.16591!2d16.152603!3f43!4f0!5f0.7820865974627469" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" style="pointer-events:none;z-index:-1;" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!4v1669645550024!6m8!1m7!1sCAoSLEFGMVFpcE9VaVY1YktBeXFaVmZfWlRNM0pZaUdod0lEUFI3Q0pRamlWNlQ4!2m2!1d39.16591!2d16.152603!3f43!4f0!5f0.7820865974627469" width="100%" height="100%" style="border:0;" allowfullscreen="" style="pointer-events:none;z-index:-1;" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
         <section class="article-container w-full 
