fix mobile project-landinh

--- a/src/index.html
+++ b/src/index.html
@@ -21,13 +21,14 @@
       <div class="main">
 
         <section id="projects" class="projects-grid 
-        block p-16 pb-0
+        block pl-16 pr-16 pb-0
         md:grid md:grid-cols-2 md:gap-4 
         relative">
           <div class="project-landing 
           col-span-2 
-          pt-32
+          pt-28
           flex justify-start items-center
+          sd:pt-32
           md:justify-center md:items-center md:col-span-1
           md:pb-0 md:pt-0
           relative">
@@ -38,8 +39,9 @@
           </div>
           <div class="project-landing 
           col-span-2  
-          pt-32 pb-32
+          pt-28
           flex justify-start items-center
+          sd:pt-32 
           md:justify-center md:items-center md:col-span-1
           md:pb-0 md:pt-0
           relative">
