fix mobile project-grig

--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,10 @@
       <div class="main">
 
         <section id="projects" class="projects-grid 
-        block pl-16 pr-16 pb-0
+        block 
+        pl-8
         md:grid md:grid-cols-2 md:gap-4 
+        sd:pl-16 sd:pr-16
         relative">
           <div class="project-landing 
           col-span-2 
