--- a/src/remapping-lago.html
+++ b/src/remapping-lago.html
@@ -13,7 +13,7 @@
       <nav id="nav" class="fixed flex justify-center">
         <div class="md:flex md:justify-around w-fit">
           <button class="header-button" name="Sustaria Lab">
-            <a class="sustaria" href="./index.html">Sustaria Festival <span>| Lab</span></a>
+            <a class="sustaria" href="./index.html">Sustaria <span>| Lab</span></a>
           </button>
         </div>
       </nav>
@@ -146,17 +146,6 @@
         <div class="footer-top
         md:flex md:flex-row md:justify-between md:items-center md: p-2 md:pl-5 md:pr-5
         block">
-          <div  name="tagline" class="block pr-5">Identities and cultural roots through collective design</div>
-          <div name="contacts" class="md:flex gap-10 text-right">
-            <a href="mailto:rocco.punghellini@gmail.com" class="underline">Contact Us</a>
-            <!-- <a href="mailto:rocco.punghellini@gmail.com">cristina.muto3@gmail.com</a> -->
-          </div>
-        </div>
-
-        <div class="footer-bottom">
-          <div class="footer-top
-        md:flex md:flex-row md:justify-between md:items-center md: p-2 md:pl-5 md:pr-5
-        block">
           <!-- <div name="tagline" class="block pr-5">
              Identities and cultural roots through collective design 
           </div>-->
@@ -167,7 +156,7 @@
         </div>
 
         <div class="footer-bottom">
-          
+          <!-- <div class="fake-marquee">Open for Collaborations Open for Collaborations Open for Collaborations Open for Collaborations Open for Collaborations Open for Collaborations Open for Collaborations Open for Collaborations Open for Collaborations</div> -->
           <div class="marquee enable-animation">
             <ul class="marquee__content">
               <li>Pratiche progettuali e azioni collettive per attivare i luoghi, le identità culturali e il patrimonio immateriale. </li>
