--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
           max-w-6xl
           ">
             <h3 class="mt-12">{ <em>Cos'è</em> Sustarìa LAB }</h3>
-            <p>Sustarìa LAB è un progetto nato due anni fa da una collaborazione fra Cristina Muto - ideatrice e co-curatrice di Sustarìa Festival - e Rocco Punghellini, con l’obiettivo di portare nel festival un momento di invenzione legato al design e alla comunicazione visiva.</p>
+            <p>Sustarìa LAB è un progetto nato nel 2020 fa da una collaborazione fra Cristina Muto - ideatrice e co-curatrice di Sustarìa Festival - e Rocco Punghellini, con l’obiettivo di portare nel festival un momento di invenzione legato al design e alla comunicazione visiva.</p>
             <p>Cristina Muto è designer e co-organizzatrice del festival Sustarìa. Laureata in design del prodotto al Politecnico di Milano, si è avvicinata a diversi ambiti progettuali grazie alle esperienze formative a Berlino e a Bangalore. In particolare al design partecipativo e al design per l’innovazione sociale.
               Attualmente ha sede a Milano dove lavora come UX-UI designer.</p>
             <p><a href="https://roccopunghellini.pages.dev/" target="_blank" rel="noopener noreferrer">Rocco</a> è un visual designer e front-end developer fluttuante fra Parigi - dove vive attualmente, Milano, e Parma. Formatosi in design della comunicazione al Politecnico di Milano, e successivamente al Royal College of Art di Londra, crede fortemente nel design come strumento per raccontare il presente ed emozionare. Fra i suoi interessi principali vi sono gli usi e le implicazioni etiche presenti e future della tecnologia.</p>
