figma cristina corrections

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
           md:pb-0 md:pt-0
           relative">
             <a href="./remapping-lago.html">
-              <h2>Remapping<br>Lago</h2>
+              <h2>Remapping<br>Lago <span class="text-5xl">🌎</span></h2>
               <div id="button-1" class="button absolute green">2021</div>
             </a>
           </div>
@@ -61,15 +61,12 @@
           md:p-12 md:pt-32
           max-w-6xl
           ">
-            <h3 class="mt-12">{ <em>Cos'è</em> Sustarìa LAB }</h3>
-            <p>Sustarìa LAB è un progetto nato nel 2020 fa da una collaborazione fra Cristina Muto - ideatrice e co-curatrice di Sustarìa Festival - e Rocco Punghellini, con l’obiettivo di portare nel festival un momento di invenzione legato al design e alla comunicazione visiva.</p>
+            <h3 class="mt-12">{ <em>Sustarìa LAB</em> }</h3>
+            <p><mark><em>Remapping Lago</em> e <em>Ricamo apotropaico</em> sono i primi due laboratori di Sustarìa Festival, nati con l’obiettivo di portare nel programma dell’evento un momento di invenzione legato al design e alla comunicazione visiva.</mark> Attraverso pratiche progettuali collettive vengono affrontati i temi dell’identità culturale, del patrimonio immateriale e della relazione con i luoghi, nel contesto di un piccolo paese calabrese. Sustarìa LAB è un progetto nato nel 2020 fa da una collaborazione fra Cristina Muto - ideatrice e co-curatrice di Sustarìa Festival - e Rocco Punghellini, con l’obiettivo di portare nel festival un momento di invenzione legato al design e alla comunicazione visiva.</p>
+            <p>Sustarìa - Festival indipendente di teatro e cultura popolare, è nato a Lago (Cs) nel 2020. <mark>Il termine “sustarìa”, nel dialetto locale indica uno stato d’animo di indefinita inquietudine, di irrequietezza senza motivo apparente,</mark> analogo a quella malinconia che, secondo una vasta letteratura, sarebbe anche lo stato d’animo delle personalità creative. L’obiettivo del festival è quello di raccogliere e dare uno sbocco ai fermenti creativi che si agitano sotto la superficie della comunità locale, spesso soffocati da un immaginario culturale ormai dominante che proviene dai centri urbani. I laboratori, insieme a spettacoli e performance sono le attività principali del festival e nascono con l’esigenza di creare spazi di confronto e condivisione all’interno di una piccola comunità, in cui tradizioni e riti collettivi rappresentano ancora un forte elemento di coesione sociale. </p>
             <p>Cristina Muto è designer e co-organizzatrice del festival Sustarìa. Laureata in design del prodotto al Politecnico di Milano, si è avvicinata a diversi ambiti progettuali grazie alle esperienze formative a Berlino e a Bangalore. In particolare al design partecipativo e al design per l’innovazione sociale.
               Attualmente ha sede a Milano dove lavora come UX-UI designer.</p>
             <p><a href="https://roccopunghellini.pages.dev/" target="_blank" rel="noopener noreferrer">Rocco</a> è un visual designer e front-end developer fluttuante fra Parigi - dove vive attualmente, Milano, e Parma. Formatosi in design della comunicazione al Politecnico di Milano, e successivamente al Royal College of Art di Londra, crede fortemente nel design come strumento per raccontare il presente ed emozionare. Fra i suoi interessi principali vi sono gli usi e le implicazioni etiche presenti e future della tecnologia.</p>
-            <h3 class="mt-24">{ <em>Due parole su Sustarìa Festival</em> }</h3>
-            <p>Sustarìa - Festival indipendente di teatro e cultura popolare, è nato a Lago (Cs) nel 2020. <mark>Il termine “sustarìa”, nel dialetto locale indica uno stato d’animo di indefinita inquietudine, di irrequietezza senza motivo apparente,</mark> analogo a quella malinconia che, secondo una vasta letteratura, sarebbe anche lo stato d’animo delle personalità creative. L’obiettivo del festival è quello di raccogliere e dare uno sbocco ai fermenti creativi che si agitano sotto la superficie della comunità locale, spesso soffocati da un immaginario culturale ormai dominante che proviene dai centri urbani. I laboratori, insieme a spettacoli e performance sono le attività principali del festival e nascono con l’esigenza di creare spazi di confronto e condivisione all’interno di una piccola comunità, in cui tradizioni e riti collettivi rappresentano ancora un forte elemento di coesione sociale. </p>
-
-            
           </article>
         </section>
 
